--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@discordjs/builders": "^1.2.0",
     "@discordjs/rest": "^1.0.1",
+    "@discordjs/voice": "^0.11.0",
     "@types/node": "^18.0.6",
     "discord-api-types": "^0.37.1",
     "discord-player": "^5.3.1",
