--- a/package.json
+++ b/package.json
@@ -1,29 +1,215 @@
 {
-  "name": "siguma-chan-bot",
+  "name": "some-one-s-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "誰でも簡単にBotが作れるやつです。",
   "main": "index.js",
-  "scripts": {
-    "test": "node index.js",
-    "start": "node index.js"
+  "dependencies": {
+    "abab": "^2.0.6",
+    "accepts": "^1.3.8",
+    "acorn": "^8.8.0",
+    "acorn-globals": "^6.0.0",
+    "acorn-walk": "^7.2.0",
+    "agent-base": "^6.0.2",
+    "array-flatten": "^1.1.1",
+    "asynckit": "^0.4.0",
+    "body-parser": "^1.20.0",
+    "boolbase": "^1.0.0",
+    "browser-process-hrtime": "^1.0.0",
+    "buffer-from": "^1.1.2",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "caseless": "^0.12.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cheerio-select": "^2.1.0",
+    "combined-stream": "^1.0.8",
+    "concat-stream": "^2.0.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "css-select": "^5.1.0",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "cross-spawn": "^7.0.3",
+    "css-what": "^6.1.0",
+    "cssom": "^0.4.4",
+    "cssstyle": "^2.3.0",
+    "dargs": "^7.0.0",
+    "data-uri-to-buffer": "^4.0.0",
+    "data-urls": "^2.0.0",
+    "debug": "^2.6.9",
+    "decimal.js": "^10.4.0",
+    "deep-is": "^0.1.4",
+    "delayed-stream": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "discord-api-types": "^0.37.4",
+    "discord.js": "^14.2.0",
+    "discord-player": "^5.3.1",
+    "dom-serializer": "^2.0.0",
+    "domelementtype": "^2.3.0",
+    "domexception": "^2.0.1",
+    "domhandler": "^5.0.3",
+    "domutils": "^3.0.1",
+    "dotenv": "^16.0.1",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^1.0.2",
+    "entities": "^4.3.1",
+    "env-paths": "^2.2.1",
+    "escape-html": "^1.0.3",
+    "escodegen": "^2.0.0",
+    "esprima": "^4.0.1",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "execa": "^5.1.1",
+    "express": "^4.18.1",
+    "fast-deep-equal": "^3.1.3",
+    "fetch-blob": "^3.1.5",
+    "ffmpeg-static": "^5.0.2",
+    "fast-levenshtein": "^2.0.6",
+    "file-type": "^17.1.6",
+    "finalhandler": "^1.2.0",
+    "formdata-polyfill": "^4.0.10",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "form-data": "^3.0.1",
+    "fs": "^0.0.1-security",
+    "function-bind": "^1.1.1",
+    "genius-lyrics": "^4.4.0",
+    "get-intrinsic": "^1.1.2",
+    "get-stream": "^6.0.1",
+    "has": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "himalaya": "^1.1.0",
+    "html-encoding-sniffer": "^2.0.1",
+    "htmlparser2": "^8.0.1",
+    "http-errors": "^2.0.0",
+    "http-proxy-agent": "^4.0.1",
+    "http-response-object": "^3.0.2",
+    "human-signals": "^2.1.0",
+    "https-proxy-agent": "^5.0.1",
+    "iconv-lite": "^0.4.24",
+    "ieee754": "^1.2.1",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-potential-custom-element-name": "^1.0.1",
+    "is-stream": "^2.0.1",
+    "is-unix": "^2.0.7",
+    "isexe": "^2.0.0",
+    "jsdom": "^16.7.0",
+    "levn": "^0.3.0",
+    "libsodium": "^0.7.10",
+    "libsodium-wrappers": "^0.7.10",
+    "lodash": "^4.17.21",
+    "lodash.snakecase": "^4.1.1",
+    "lodash.uniqwith": "^4.5.0",
+    "m3u8stream": "^0.8.6",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "merge-stream": "^2.0.0",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-types": "^2.1.35",
+    "mime-db": "^1.52.0",
+    "mimic-fn": "^2.1.0",
+    "miniget": "^4.2.2",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "node-domexception": "^1.0.0",
+    "node-fetch": "^3.2.6",
+    "npm-run-path": "^4.0.1",
+    "nth-check": "^2.1.1",
+    "nwsapi": "^2.2.1",
+    "object-inspect": "^1.12.2",
+    "on-finished": "^2.4.1",
+    "onetime": "^5.1.2",
+    "optionator": "^0.8.3",
+    "parse-cache-control": "^1.0.1",
+    "parse5": "^7.0.0",
+    "parse5-htmlparser2-tree-adapter": "^7.0.0",
+    "parseurl": "^1.3.3",
+    "path-key": "^3.1.1",
+    "path-to-regexp": "^0.1.7",
+    "peek-readable": "^5.0.0",
+    "prelude-ls": "^1.1.2",
+    "prism-media": "^1.3.4",
+    "progress": "^2.0.3",
+    "proxy-addr": "^2.0.7",
+    "punycode": "^2.1.1",
+    "qs": "^6.10.3",
+    "querystringify": "^2.2.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readable-stream": "^3.6.0",
+    "psl": "^1.9.0",
+    "safer-buffer": "^2.1.2",
+    "sax": "^1.2.4",
+    "saxes": "^5.0.1",
+    "send": "^0.18.0",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "shebang-command": "^2.0.0",
+    "requires-port": "^1.0.0",
+    "readable-web-to-node-stream": "^3.0.2",
+    "shebang-regex": "^3.0.0",
+    "reverbnation-scraper": "^2.0.0",
+    "safe-buffer": "^5.2.1",
+    "signal-exit": "^3.0.7",
+    "side-channel": "^1.0.4",
+    "soundcloud-scraper": "^5.0.3",
+    "source-map": "^0.6.1",
+    "spotify-uri": "^3.0.2",
+    "spotify-url-info": "^3.1.4",
+    "statuses": "^2.0.1",
+    "string_decoder": "^1.3.0",
+    "strip-final-newline": "^2.0.0",
+    "strtok3": "^7.0.0",
+    "symbol-tree": "^3.2.4",
+    "tiny-typed-emitter": "^2.1.0",
+    "toidentifier": "^1.0.1",
+    "token-types": "^5.0.1",
+    "tough-cookie": "^4.1.2",
+    "tslib": "^2.4.0",
+    "tr46": "^0.0.3",
+    "type-check": "^0.3.2",
+    "ts-mixer": "^6.0.1",
+    "type-is": "^1.6.18",
+    "undici": "^5.8.2",
+    "universalify": "^0.2.0",
+    "unpipe": "^1.0.0",
+    "url-parse": "^1.5.10",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
+    "w3c-hr-time": "^1.0.2",
+    "w3c-xmlserializer": "^2.0.0",
+    "web-streams-polyfill": "^3.2.1",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-encoding": "^1.0.5",
+    "whatwg-mimetype": "^2.3.0",
+    "whatwg-url": "^5.0.0",
+    "which": "^2.0.2",
+    "estraverse": "^5.3.0",
+    "word-wrap": "^1.2.3",
+    "xml-name-validator": "^3.0.0",
+    "ws": "^8.8.1",
+    "typedarray": "^0.0.6",
+    "xmlchars": "^2.2.0",
+    "youtube-dl-exec": "^1.3.4",
+    "ytdl-core": "^4.11.0",
+    "youtube-sr": "^4.3.1"
   },
-  "keywords": [],
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SigumaRoot/Some-one-s-bot.git"
+  },
   "author": "SigumaRoot",
   "license": "ISC",
-  "dependencies": {
-    "@discord-player/downloader": "^3.0.1",
-    "@discord-player/extractor": "^3.0.2",
-    "@discordjs/builders": "^1.2.0",
-    "@discordjs/rest": "^1.0.1",
-    "@discordjs/voice": "^0.11.0",
-    "@types/node": "^18.0.6",
-    "discord-api-types": "^0.37.1",
-    "discord-player": "^5.3.1",
-    "discord.js": "^14.2.0",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "ffmpeg-static": "^5.0.2",
-    "fs": "^0.0.1-security",
-    "node-fetch": "^3.2.6"
-  }
+  "bugs": {
+    "url": "https://github.com/SigumaRoot/Some-one-s-bot/issues"
+  },
+  "homepage": "https://github.com/SigumaRoot/Some-one-s-bot#readme"
 }
