--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "誰でも簡単にBotが作れるやつです。",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/voice": "^0.11.0",
     "abab": "^2.0.6",
     "accepts": "^1.3.8",
     "acorn": "^8.8.0",
@@ -25,10 +26,10 @@
     "concat-stream": "^2.0.0",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.4",
-    "css-select": "^5.1.0",
     "cookie": "^0.5.0",
     "cookie-signature": "^1.0.6",
     "cross-spawn": "^7.0.3",
+    "css-select": "^5.1.0",
     "css-what": "^6.1.0",
     "cssom": "^0.4.4",
     "cssstyle": "^2.3.0",
@@ -42,8 +43,8 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "discord-api-types": "^0.37.4",
-    "discord.js": "^14.2.0",
     "discord-player": "^5.3.1",
+    "discord.js": "^14.2.0",
     "dom-serializer": "^2.0.0",
     "domelementtype": "^2.3.0",
     "domexception": "^2.0.1",
@@ -57,20 +58,21 @@
     "escape-html": "^1.0.3",
     "escodegen": "^2.0.0",
     "esprima": "^4.0.1",
+    "estraverse": "^5.3.0",
     "esutils": "^2.0.3",
     "etag": "^1.8.1",
     "execa": "^5.1.1",
     "express": "^4.18.1",
     "fast-deep-equal": "^3.1.3",
+    "fast-levenshtein": "^2.0.6",
     "fetch-blob": "^3.1.5",
     "ffmpeg-static": "^5.0.2",
-    "fast-levenshtein": "^2.0.6",
     "file-type": "^17.1.6",
     "finalhandler": "^1.2.0",
+    "form-data": "^3.0.1",
     "formdata-polyfill": "^4.0.10",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
-    "form-data": "^3.0.1",
     "fs": "^0.0.1-security",
     "function-bind": "^1.1.1",
     "genius-lyrics": "^4.4.0",
@@ -84,8 +86,8 @@
     "http-errors": "^2.0.0",
     "http-proxy-agent": "^4.0.1",
     "http-response-object": "^3.0.2",
-    "human-signals": "^2.1.0",
     "https-proxy-agent": "^5.0.1",
+    "human-signals": "^2.1.0",
     "iconv-lite": "^0.4.24",
     "ieee754": "^1.2.1",
     "inherits": "^2.0.4",
@@ -107,8 +109,8 @@
     "merge-stream": "^2.0.0",
     "methods": "^1.1.2",
     "mime": "^1.6.0",
-    "mime-types": "^2.1.35",
     "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
     "mimic-fn": "^2.1.0",
     "miniget": "^4.2.2",
     "mkdirp": "^1.0.4",
@@ -134,13 +136,17 @@
     "prism-media": "^1.3.4",
     "progress": "^2.0.3",
     "proxy-addr": "^2.0.7",
+    "psl": "^1.9.0",
     "punycode": "^2.1.1",
     "qs": "^6.10.3",
     "querystringify": "^2.2.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.1",
     "readable-stream": "^3.6.0",
-    "psl": "^1.9.0",
+    "readable-web-to-node-stream": "^3.0.2",
+    "requires-port": "^1.0.0",
+    "reverbnation-scraper": "^2.0.0",
+    "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
     "sax": "^1.2.4",
     "saxes": "^5.0.1",
@@ -148,13 +154,9 @@
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "shebang-command": "^2.0.0",
-    "requires-port": "^1.0.0",
-    "readable-web-to-node-stream": "^3.0.2",
     "shebang-regex": "^3.0.0",
-    "reverbnation-scraper": "^2.0.0",
-    "safe-buffer": "^5.2.1",
-    "signal-exit": "^3.0.7",
     "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
     "soundcloud-scraper": "^5.0.3",
     "source-map": "^0.6.1",
     "spotify-uri": "^3.0.2",
@@ -168,11 +170,12 @@
     "toidentifier": "^1.0.1",
     "token-types": "^5.0.1",
     "tough-cookie": "^4.1.2",
-    "tslib": "^2.4.0",
     "tr46": "^0.0.3",
-    "type-check": "^0.3.2",
     "ts-mixer": "^6.0.1",
+    "tslib": "^2.4.0",
+    "type-check": "^0.3.2",
     "type-is": "^1.6.18",
+    "typedarray": "^0.0.6",
     "undici": "^5.8.2",
     "universalify": "^0.2.0",
     "unpipe": "^1.0.0",
@@ -188,17 +191,14 @@
     "whatwg-mimetype": "^2.3.0",
     "whatwg-url": "^5.0.0",
     "which": "^2.0.2",
-    "estraverse": "^5.3.0",
     "word-wrap": "^1.2.3",
-    "xml-name-validator": "^3.0.0",
     "ws": "^8.8.1",
-    "typedarray": "^0.0.6",
+    "xml-name-validator": "^3.0.0",
     "xmlchars": "^2.2.0",
     "youtube-dl-exec": "^1.3.4",
-    "ytdl-core": "^4.11.0",
-    "youtube-sr": "^4.3.1"
+    "youtube-sr": "^4.3.1",
+    "ytdl-core": "^4.11.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
