--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@discordjs/builders": "^1.2.0",
     "@discordjs/rest": "^1.1.0",
     "@discordjs/voice": "^0.11.0",
+    "discord-api-types": "^0.37.5",
+    "discord-player": "^5.3.1",
     "discord.js": "^14.3.0",
     "express": "^4.18.1",
     "ffmpeg-static": "^5.0.2",
