--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
-    "node-fetch": "^3.2.6"
+    "node-fetch": "^3.2.6",
+    "opusscript": "^0.0.8",
+    "tweetnacl": "^1.0.3"
   }
 }
