--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "discord-anti-spam": "^2.8.0",
     "discord-api-types": "^0.37.1",
+    "discord-player": "^5.3.1",
     "discord.js": "^14.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
