--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "fs": "^0.0.1-security",
     "fs-extra": "^10.1.0",
     "isomorphic-unfetch": "^3.1.0",
+    "libsodium-wrappers": "^0.7.10",
     "node-cron": "^3.0.2",
     "opusscript": "^0.0.8",
     "request": "^2.88.2",
     "spotify-url-info": "^3.1.7",
+    "tweetnacl": "^1.0.3",
     "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.1"
+    "ytdl-core": "^4.11.2"
   }
 }
