--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-cron": "^3.0.2",
     "opusscript": "^0.0.8",
     "request": "^2.88.2",
+    "require-dir": "^1.2.0",
     "spotify-url-info": "^3.1.7",
     "tweetnacl": "^1.0.3",
     "yt-search": "^2.10.3",
